upgrading Difs color
   aboxModKaliEiffie updated aux.color
	 amazingSurfMod1 updated aux.color
	 mandalayBoxV2, add aux.dist
	 dIFSSphere, fix aux.color
	 dIFSCylinder, fix aux.color
	 dIFSEllipsoid, fix aux.color
	 dIFSPrism, fix aux.color
	 dIFSTorus, fix aux.color
	 dIFSBoxDiagonalV1, fix aux.color
	 dIFSBoxDiagonalV3, fix aux.color
	 dIFSBoxV1, fix aux.color
	 dIFSHextgrid2, fix aux.color
	 dIFSMenger, fix aux.color
	 dIFSMultiV1, fix aux.color

	transfDIFSBoxFrame, fix aux.color

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -18,7 +18,10 @@ v2.34 (??? 2025)
 	 dIFSBoxV1, fix aux.color
 	 dIFSHextgrid2, fix aux.color
 	 dIFSMenger, fix aux.color
-	 dIFSMultiV1 fix aux.color
+	 dIFSMultiV1, fix aux.color
+
+  transfDIFSBoxFrame, fix aux.color
+
 
 	 transfAbsSym3, fix wrong parameter code and add scale
 	 transfJuliaboxV2, update color
