--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -31,6 +31,11 @@ v2.34 (??? 2025)
 	 transfDIFSTorusV4, fix aux.color
 	 transfDIFSTube, fix aux.color
 
+  .transfDIFSTorusTwist, fix aux.color
+
+   transfDIFSTorusGrid, fix aux.color
+   transfDIFSTriGrid, fix aux.color
+
 
    transfDIFSTorusV3, add aux.color
 
