transf_difs_diamond.cl
 transf_difs_ellipsoid.cl aux.color

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -50,12 +50,14 @@ v2.34 (??? 2025)
 	 transfDIFSSpring
 	 transfDIFSTorusMenger
 
+   transfDIFSDiamond
    transfDIFSGearV1
 	 transfDIFSHeart
 
 
 
 
+   transfDIFSEllipsoid, add aux.color
    transfDIFSTorusV3, add aux.color
 
 	 transfAbsSym3, fix wrong parameter code and add scale
