aux col updates    transfDIFSBox
	 transfDIFSCylinder
	 transfDIFSCylinderV2

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -54,6 +54,10 @@ v2.34 (??? 2025)
    transfDIFSGearV1
 	 transfDIFSHeart
 
+   transfDIFSBox
+	 transfDIFSCylinder
+	 transfDIFSCylinderV2
+
 
 
 
