--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -58,6 +58,10 @@ v2.34 (??? 2025)
 	 transfDIFSCylinder
 	 transfDIFSCylinderV2
 
+   transfDIFSCayley2
+	 transfDIFSBoxV2
+	 transfDIFSBoxV3
+
 
 
 
