--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,6 +3,8 @@ Version history
 v2.34 (??? 2025)
 
 - Added new fractal formulas
+   kochIfs
+	 kochV5
 
 - modified fractal formulas
    aboxModKaliEiffie updated aux.color
