fractal_msltoe_sym3_mod6.cpp add aux.col

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,5 +1,15 @@
 Version history
 
+v2.35 (September 2025)
+
+- Added new fractal formulas
+
+
+- modified fractal formulas
+   msltoeSym3Mod6, added aux.color
+
+
+
 v2.34 (September 2025)
 
 - Added new fractal formulas
