transf_abs_sym3.cl add translate cpix domain,
 added color trial

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.35 (September 2025)
 
 - modified fractal formulas
    msltoeSym3Mod6, added aux.color
+	 transfAbsSym3, add cPixel, add color
 
 
 
