update color juliaBox

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,11 +3,13 @@ Version history
 v2.35 (September 2025)
 
 - Added new fractal formulas
+   mandelbarV3
 
 
 - modified fractal formulas
    msltoeSym3Mod6, added aux.color
 	 transfAbsSym3, add cPixel, add color
+	 transfJuliabox, update color
 
 
 
